fixed css and alignment issues on request contribution page

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -203,20 +203,21 @@ div.donatePhoto{
 }
 
 .donate_img{
-  padding-left: 4%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 12em;
   float: left;
   height: 100%;
-
 }
 
 .picButton{
   float: right;
-  padding-right: 5%;
-  padding-left: 5%;
+  padding-right: 2%;
+  padding-left: 2%;
 }
 
 .fillIn{
-  width: 55%;
+  width: 45%;
   float: right;
   height: 80%;
   margin-bottom: 1em;
@@ -230,6 +231,18 @@ div.donatePhoto{
 #contentBox{
   width: 70em;
   margin: 3% auto 5% auto;
+}
+
+#tax-form-checkbox {
+  margin-top: 1.5em;
+  margin-right: 0.5em;
+  float: left;
+}
+
+#tax-form-label {
+  width: 75%;
+  display: inline-block;
+  float: none;
 }
 
 /*------------- Donor Index and New Pages -------------- */
@@ -313,7 +326,6 @@ ul li {
 
 .fakeButton{
   width: 8em;
-  margin-left: 50%;
 }
 
 .actualButton{
@@ -331,6 +343,7 @@ ul li {
 }
 
   .formButton{
+    padding-top: 0.5em;
     width: 100%;
     clear: both;
   }
@@ -698,13 +711,28 @@ input#email, input#password{
 }
 
 /*****************media queries ******************/
-/*tablet landscape*/
-@media (max-width: 1024px){
+/*tablet landscape and small laptop screens*/
+@media (max-width: 1310px){
   .reqAmtBox{
-    margin-top: 33%;
+    margin-top: 8em;
   }
-  .picButton{
-    float: left;
+  .picButton, .donate_img, .fillIn {
+    float: none;
+  }
+  .aRequest {
+    text-align: center;
+  }
+
+  #tax-form-checkbox {
+    margin-top: 0.5em;
+    margin-right: 0.5em;
+    float: none  ;
+  }
+
+  #tax-form-label {
+    width: 75%;
+    display: inline-block;
+    float: none;
   }
 }
 
@@ -755,12 +783,16 @@ input#email, input#password{
     margin-top: 12%;
   }
   .donate_img{
-    margin: 4% 0 0 0;
-    padding: 0;
+    margin-left: auto;
+    margin-right: auto;
+    width: 12em;
+    float: left;
+    height: 100%;
   }
   .picButton{
-    padding-left: 0;
     float: right;
+    padding-right: 2%;
+    padding-left: 2%;
   }
   div.donatePhoto{
     margin: 5%;
@@ -793,6 +825,24 @@ input#email, input#password{
   .searchBox{
     width: 80%;
     margin: 2% auto 0 auto;
+  }
+  .fillIn{
+    width: 45%;
+    float: right;
+    height: 80%;
+    margin-bottom: 1em;
+  }
+
+  #tax-form-checkbox {
+    margin-top: 1.5em;
+    margin-right: 0.5em;
+    float: left;
+  }
+
+  #tax-form-label {
+    width: 75%;
+    display: inline-block;
+    float: left;
   }
 }
 
